* :ref:`Version 5.1.3 <kotlin-sync-version-5.1.3>`
* :ref:`Version 5.1.2 <kotlin-sync-version-5.1.2>`
* :ref:`Version 5.1.1 <kotlin-sync-version-5.1.1>`
* :ref:`Version 5.1 <kotlin-sync-version-5.1>`
* :ref:`Version 5.0 <kotlin-sync-version-5.0>`

.. _kotlin-sync-version-5.4:

What's New in 5.4
-----------------

The 5.4 driver release includes the following changes, fixes,
and features:

.. sharedinclude:: dbx/jvm/v5.4-wn-items.rst

   .. replacement:: install-bom-link

      the :ref:`Add the Driver Bill of Materials
      <kotlin-sync-get-started-install-bom>` step of the Download and
      Install tutorial

   .. replacement:: sort-option-link

      the :ref:`kotlin-sync-client-bulk-write-update` and
      :ref:`kotlin-sync-client-bulk-write-replace` sections of the Bulk Write
      Operations guide

   .. replacement:: k8s-link

      the :ref:`MONGODB-OIDC: Kubernetes <kotlin-sync-auth-kubernetes>`
      section of the Enterprise Authentication Mechanisms guide

   .. replacement:: atlas-query-operators

      the :ref:`Atlas Search <kotlin-sync-atlas-search-stage>` section of the Aggregation guide

.. _kotlin-sync-version-5.3:

What's New in 5.3
-----------------

The 5.3 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.3-wn-items.rst

   .. replacement:: vector-type-example-link

      To learn about this type, see the
      `BinaryVector <{+api-root+}/bson/org/bson/BinaryVector.html>`__
      API documentation.

   .. replacement:: update-replace-example-link

      the :ref:`kotlin-sync-write-update`,
      :ref:`kotlin-sync-write-replace`, and
      :ref:`kotlin-sync-bulk-write` guides

- Support for using builders class methods directly with data class
  properties. To learn more, see the :ref:`kotlin-sync-builders-data-classes`
  guide. This functionality is supported by the `{+driver-short+}
  Extensions package <{+api-root+}/mongodb-driver-kotlin-extensions/index.html>`__