@@ -227,6 +227,24 @@ encode defaults:
    :end-before: end-codec
    :dedent:
 
+.. _kotlin-sync-serialization-snake-case-eg:
+
+Implement Snake Case Naming Strategy
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+When using ``bson-kotlinx`` package v5.4 or later, you can direct the driver to
+serialize data class fields names written in camel case to snake case in MongoDB.
+The following example shows how to create and register a custom codec
+to convert data class field names into snake case by setting the
+``bsonNamingStrategy`` parameter in a codec:
+
+
+.. literalinclude:: /includes/data-formats/serialization.kt
+   :language: kotlin
+   :start-after: start-snake-case
+   :end-before: end-snake-case
+   :dedent:
+
 To learn more about the methods and classes mentioned in this section,
 see the following API documentation:
 
@@ -238,6 +256,8 @@ see the following API documentation:
 
 - `BsonConfiguration
   <{+api-root+}/bson-kotlinx/bson-kotlinx/org.bson.codecs.kotlinx/-bson-configuration/index.html>`__
+
+- `BsonNamingStrategy <{+api-root+}/bson-kotlinx/bson-kotlinx/org.bson.codecs.kotlinx/-bson-naming-strategy/index.html>`__
  
 .. _kotlin-sync-polymorphic:
 
